[tool.poetry]
name = "wilbur"
version = "0.1.0"
description = ""
authors = ["Logan <logan@sige.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
pyyaml = "^6.0.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
